# openWhatsapp

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: 01-architecture.md  02-database-schema.sql  03-api-spec.md  04-ai-orchestration.md  05-deployment.md  06-security.md  07-roadmap-and-scaling.md  08-frontend-architecture.md
infra/loki/: loki-config.yml
infra/nginx/: nginx.conf
infra/prometheus/: alert.rules.yml  prometheus.yml
infra/promtail/: promtail-config.yml
scripts/: backup.sh  bootstrap.sh  restore.sh
services/backend/: Dockerfile  pyproject.toml
services/backend/app/: main.py
services/backend/app/ai/: ollama_client.py  orchestrator.py  prompts.py
services/backend/app/api/routes/: dashboard.py  internal_wa.py  reminders.py  tasks.py
services/backend/app/core/: config.py  security.py
services/backend/app/db/: session.py
services/backend/app/integrations/: jira.py
services/backend/app/models/: __init__.py
services/backend/app/schemas/: __init__.py
services/backend/app/services/: jira_service.py  meeting_service.py  reminder_service.py  report_service.py  task_service.py  user_service.py
services/backend/app/workers/: celery_app.py  tasks.py
services/frontend/: Dockerfile  package.json
services/frontend/src/app/: layout.tsx
services/frontend/src/app/dashboard/: page.tsx
services/frontend/src/lib/: api.ts  auth.ts
services/whatsapp-gateway/: Dockerfile  package.json
services/whatsapp-gateway/src/: index.js
