[project]
name = "waint-backend"
version = "0.1.0"
description = "WAINT FastAPI backend: REST API + AI orchestration + scheduler"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",            # sync driver for Celery workers
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "redis>=5.0",
    "celery>=5.4",
    "python-jose[cryptography]>=3.3",   # JWT verification
    "cryptography>=43.0",               # AES-GCM for oauth tokens
    "python-dateutil>=2.9",            # NL/relative time + RRULE
    "dateparser>=1.2",                 # "in 1 hour", "tomorrow 10am"
    "prometheus-client>=0.20",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "pip-audit>=2.7"]

[tool.ruff]
line-length = 100
target-version = "py312"
